2012-01-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testResultParser.cpp: Remove include boost::thread.

	* testsuite/testAbstractContext.cpp: Add testRunningDLV.

	* testsuite/Makefile.am (testAbstractContext_LDADD): Add more libs.

	* src/dmcs/DLVEvaluator.cpp: Finish with solve().

	* include/network/NewConcurrentMessageDispatcher.h: Store queue_size.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

	* include/mcs/NewBeliefState.h: Add method for finding TRUE bits.

	* include/dmcs/Makefile.am: Add BeliefStateResultAdder.h.

	* include/dmcs/Instantiator.h: Remove InputProvider.
	* src/dmcs/Instantiator.cpp: Likewise.

	* include/dmcs/DLVInstantiator.h: Store local_kb as a string.
	* src/dmcs/DLVInstantiator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: More parameters to solve().
	* include/dmcs/Evaluator.h: Likewise.
	* src/dmcs/Evaluator.cpp: Likewise.

	* configure.ac: Show DLVPATH.

	* examples/testAbstractContext.inp: Update eample.

2012-01-26  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testAbstractContext.

	* src/dmcs/Makefile.am: Add Evaluator.cpp and DLVEvaluator.cpp.

	* src/dmcs/Engine.cpp: Add destructor and method for debugging.
	* src/dmcs/Instantiator.cpp: Likewise.

	* src/dmcs/DLVEvaluator.cpp: Fix some bugs.

	* src/Makefile.am: Add libcurl.

	* include/dmcs/Engine.h: Add method for debugging.
	* include/dmcs/Instantiator.h: Likewise.

	* include/dmcs/DLVEvaluator.h: Add options.

	* examples/testAbstractContext.inp: New file.
	* testsuite/testAbstractContext.cpp: Likewise.

	* include/dmcs/DLVEngine.h: Add destructor.
	* src/dmcs/DLVEngine.cpp: Likewise.
	* include/dmcs/Evaluator.h: Likewise.
	* src/dmcs/Evaluator.cpp: Likewise.

2012-01-25  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/DLVEngine.h: New file.
	* src/dmcs/Engine.cpp: Likewise.
	* src/dmcs/DLVEngine.cpp: Likewise.

	* include/dmcs/Makefile.am: Add DLVEngine.h and Engine.h.
